<resources>
    <string name="app_name">Obscura</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="base_url">http://37.57.92.40:8084/</string>

    <string name="facebook_app_id">1423643837735668</string>
    <string name="fb_login_protocol_scheme">fb1423643837735668</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Main screen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--fragment sign_in-->
    <string name="txt_btn_signin">SignIn</string>
    <string name="txt_et_hint_put_password">Password</string>
    <string name="txt_et_hint_put_email">Email</string>
    <string name="txt_btn_signup">Sign Up</string>
    <string name="txt_tv_sign_in">Sign In</string>
    <string name="txt_tv_reset_account">Reset Account</string>
    <string name="txt_et_confirm_password">Confirm password</string>
    <string name="txt_dialog_cancel">Cancel</string>
    <string name="txt_dialog_ok">Ok</string>
    <string name="error_password_miss_match">password miss match</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_up">sign up</string>
    <string name="action_forgot_password">forgot password</string>
    <string name="action_login_social">login social</string>
    <string name="facebook_scope_profile">public_profile</string>
    <string name="facebook_scope_user_friends">user_friends</string>
    <string name="error_text_facebook_error">Error login</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_return">Return</string>
    <string name="error_network">Network is not available</string>
    <string name="navigation_activity_welcome_text">WELCOME TO OBSCURA</string>
    <string name="empty_list_text">There is nothing here…</string>
    <string name="auth_username">Username</string>
    <string name="sign_in_enter">ENTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_in">/ sign in</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="password_recovery_text">PASSWORD RECOVERY</string>
    <string name="password_recovery">Don’t worry! Just fill your email and we’ll help you reset your password.</string>
    <string name="recovery_email">Email</string>
    <string name="recovery_back_to">Back to</string>
    <string name="recovery_sign_in">Sign in</string>
    <string name="recovery_submit">SUBMIT</string>
    <string name="auth_password">Password</string>
    <string name="sign_in_up">/ sign up</string>
    <string name="pin_chat">Закрепить</string>
    <string name="delete_chat">Удалить</string>
    <string name="message_here_hint">Message...</string>
    <string name="edit_profile_f_name">Your first name</string>
    <string name="edit_profile_s_name">Your second name</string>
    <string name="edit_profile_choose_country">Choose your country</string>
    <string name="edit_profile_choose_region">Choose your region</string>
    <string name="edit_profile_choose_city">Choose your city</string>

</resources>
