<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zalesskyi.android.obscure.view.auth_operation.fragments.SignInFragment">

    <TextView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:id="@+id/recover_txt"
        android:gravity="center"
        android:text="@string/password_recovery_text"
        android:textSize="40sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="-7sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="PASSWORD RECOVERY"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recover_password"
        android:textSize="17sp"
        android:text="@string/password_recovery"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="8sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/recover_txt"
        tools:text="Don’t worry! Just fill your email and we’ll help you reset your password."
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/recover_email_edit_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/recovery_email"
        android:textColorHint="#66ffffff"
        android:backgroundTint="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/recover_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_to_sign_in"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/recovery_back_to"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#b3ffffff"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="11sp"
            tools:text="Back to "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_sign_in"
            android:textSize="17sp"
            android:fontFamily="sans-serif-black"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="11sp"
            tools:text="Sign in"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recover_enter"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/recovery_submit"
            android:fontFamily="sans-serif-black"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="6sp"
            tools:text="SUBMIT"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sign_in_enter"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
