<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zalesskyi.android.obscure.view.auth_operation.fragments.SignInFragment">

    <TextView
        android:layout_width="220dp"
        android:layout_height="59dp"
        android:id="@+id/sign_up_txt"
        android:text="@string/sign_up"
        android:textSize="55sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="-7sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="SIGN UP"/>

    <TextView
        android:layout_width="182dp"
        android:layout_height="34dp"
        android:id="@+id/sign_up_in_text"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up_in"
        android:textSize="22sp"
        android:textStyle="normal"
        android:textColor="#99ffffff"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6.7sp"
        app:layout_constraintLeft_toRightOf="@id/sign_up_txt"
        app:layout_constraintTop_toBottomOf="@id/sign_up_txt"
        tools:text="/ sign in" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_username_edit_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/auth_username"
        android:textColorHint="#66ffffff"
        android:backgroundTint="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/sign_up_in_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_password_edit_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:hint="@string/auth_username"
        android:textColorHint="#66ffffff"
        android:backgroundTint="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/sign_up_username_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_password_confirm_edit_text"
        android:inputType="textPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/sign_up_confirm_password"
        android:textColorHint="#66ffffff"
        android:backgroundTint="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_enter"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/sign_in_enter"
            android:fontFamily="sans-serif-black"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="6sp"
            tools:text="ENTER"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sign_in_enter"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_fb"
        android:src="@drawable/ic_sign_in_enter"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_gplus"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_sign_in_enter"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_fb"
        app:layout_constraintLeft_toRightOf="@id/sign_up_fb"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_twitter"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_sign_in_enter"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_gplus"
        app:layout_constraintLeft_toRightOf="@id/sign_up_gplus"/>

</android.support.constraint.ConstraintLayout>
